Release Notes for the event package
-----------------------------------
R4.3.6  2018-05-16   K. Kim
        * build against BsaCore  R1.4.0

R4.3.5  2018-04-24   T. Straumann
    *use BsaCore R1.3.3
R4.3.4  2018-04-20   C. Bianchini
	*bug fix: evrSupport/src/bsa.c to divide by n-1 instead of n.

R4.3.3  2018-04-18   K. Kim
        * merge with new_bsa_core branch
        * Add new macro for NELM in BSA record.
          The new macro defines size of sink,
          if it is undefined in substitutions file it gives "1" 
          and the BSA record will as exactly previous LCLS1 BSA.
          if it is defined with some value (50 or 100), 
          the BSA record push multiple samples to compress record. 
          It will reduce processing rate of compress record and will bring better performance.
        * Add document for BsaCore integration

R4.3.2-BR-new_bsa_core: 2018-04-17 C.Bianchini
        *Changed NELM from 50 to 1.
         file changed: evrSupport/Db/bsa/bsaEdefAvg.db

R4.2.9: 2017-06-06  H. Slepicka
    Bumped MiscUtils version to R2.2.5

R4.2.8: 2017-02-20  H. Slepicka
    Fixing typo at evrSupport/src/longSubRecord.dbd line 134: promtgroup -> promptgroup 

event-R4-2-7: 2017-01-06 C. Bianchini
	*Add SYS7 option to facility independent database files for ASTA.
	file changed: evrSupport/Db/ioc/EvrPci.substitutions, evrSupport/Db/ioc/EvrPmc.substitutions, evrSupport/Db/ioc/Pattern.substitutions . 

R4.2.6: 2016-12-20 B. Hill
	* Updated to build using new git workflow

event-R4-2-5: 2016-07-13 C. Bianchini and S. Allison
	* Move record processing requests of BSA nan values from evrTask
	  to evrEventTask so the scanIoRequests done at lower priority.
	* Ignore records with timestamp of 0/0.
	* evrTime.h and evrTime.c adding a NaNflag with relative get and set functions 
	  this flag will be useful to do not call bsaChecker in case of overloaded IOCs by using the set
	  method in the st.cmd. (Example: Llrf6 for ioc-in20-rf03)
