@@ -1,5 +1,15 @@
 Release Notes for the event package
 -----------------------------------
+
+        * devBsaCore: defer activation of BSA sink until
+          iocInit is in the initHookAfterIocRunning state.
+
+          The sink does process the BSA record which is
+          not 'legal' until the IOC is fully initialized.
+          This fix mitigates a scenario where triggers
+          are enabled prematurely (it is recommended to
+          enable triggers only after IOC initialization).
+
 R4.3.6  2018-05-16   K. Kim
         * build against BsaCore  R1.4.0
 
